# aa-mirror-rs

./: Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
contrib/: S93aa-mirror-rs  S93aa-proxy-rs  readme.txt
src/: aa_services.rs  adb.rs  aoa.rs  arp_common.rs  bluetooth.rs  btle.rs  channel_manager.rs  config.rs  config_types.rs  ev.rs  h264_reader.rs  io_uring.rs  lib.rs  main.rs  scrcpy.rs  usb_gadget.rs  usb_stream.rs  web.rs
src/protos/: protos.proto
static/: config.json  index.html
