[package]
name = "aa-mirror-rs"
authors = ['FBD']
version = "0.1.0"
edition = "2021"
license = 'GPL-2.0'
description = 'AndroidAuto wired/wireless screen mirror'
documentation = 'https://github.com/FlorinBD/aa-mirror-rs'
readme = 'README.md'
categories = ['command-line-utilities']
homepage = 'https://github.com/FlorinBD/aa-mirror-rs'
repository = 'https://github.com/FlorinBD/aa-mirror-rs'
default-run = "aa-mirror-rs"

[dependencies]
bluer = { version = "0.17.4", features = ["full"] }
futures = "0.3.31"
kobject-uevent = "0.1.1"
netlink-sys = "0.8.6"
protobuf = "3.7.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-uring = "0.5.0"
mac_address = "1.1.7"
bytesize = "1.3.0"
simplelog = { version = "0.11.2", features = ["paris", "ansi_term"] }
clap = { version = "4.5.37", features = ["derive"] }
humantime = "2.1.0"
log = "0.4.22"
netif = "0.1.6"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "2.0.12"
byteorder = "1.5.0"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3" }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
toml_edit = "0.22"
chrono = "0.4.42"
hex = "0.4.3"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
anyhow = "1.0.99"
shell-words = "1.1.0"
nix = { version = "0.30", features = ["signal", "process"] }
flate2 = "1.1.2"
tar = "0.4.44"
backon = "1.5"
glob = "0.3.3"
tokio-util = "0.7.16"
uuid = "1"
sha2 = "0.10.9"
libc = "0.2.177"
time = { version = "0.3", features = ["parsing"] }
async-arp = "0.4.0"
ipnet = "2.11.0"
pnet = "0.35.0"
radb = "0.1.7"
nusb = "=0.2.0-beta.1"
port_check = "0.3.0"
dbus = "0.9.10"

[build-dependencies]
protoc-bin-vendored = "3.1.0"
protobuf-codegen = "3.7.1"

[[bin]]
name = "generate_config"
path = "src/bin/generate_config.rs"
